--- a/templates/article.html
+++ b/templates/article.html
@@ -3,16 +3,15 @@
 {% block title %}{{ entry.title }} - {% endblock %}
 {% block page-theme %}d{% endblock %}
 {% block header %}
-<div data-role="header" data-theme="b">
-	<a href="/noticias/" data-icon="arrow-l" data-rel="back">Voltar</a>
-	<h1>Últimas notícias</h1>
-</div>
+	<div data-role="header" data-theme="b">
+		<a href="/noticias/" data-icon="arrow-l" data-rel="back">Voltar</a>
+		<h1>&nbsp;</h1>
+	</div>
 {% endblock %}
 {% block content %}
-<div data-role="content">
-	<h2>{{ entry.title }}</h2>
-	{{ entry.description }}
-	<p><a href="mailto:sppratti@gmail.com" data-role="button" data-theme="c">Enviar notícia por email</a></p>
-</div>
+	<div data-role="content">
+		<h2>{{ entry.title }}</h2>
+		{{ entry.description }}
+		<p><a href="mailto:sppratti@gmail.com" data-role="button" data-theme="c">Enviar notícia por email</a></p>
+	</div>
 {% endblock %}
-{% block footer %}{% endblock %}
