--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,21 @@
     <title>{% block title %}{% endblock %}Mobile Ufes</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" type="text/css">
     <link rel="stylesheet" href="/media/css/master.css" type="text/css">
-	<link rel="alternate" href="http://portal.ufes.br/rss.xml" type="application/rss+xml" title="RSS">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
+    <link rel="alternate" href="http://portal.ufes.br/rss.xml" type="application/rss+xml" title="RSS">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
+    <script type="text/javascript">
+
+        $(document).bind('mobileinit', function() {
+            $.mobile.loadingMessage = false; 
+        });
+        
+    </script>
+    <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
 </head>
 <body>
-	<div data-role="page" data-theme="{% block page-theme %}u{% endblock %}" id="{% block page-id %}{% endblock %}">
-		{% block header %}{% endblock %}
-		{% block content %}{% endblock %}
-		{% block footer %}{% endblock %}
-	</div>
+    <div data-role="page" data-theme="{% block page-theme %}u{% endblock %}" id="{% block page-id %}{% endblock %}">
+        {% block header %}{% endblock %}
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
