--- a/templates/news.html
+++ b/templates/news.html
@@ -1,7 +1,7 @@
 ﻿{% extends 'base.html' %}
 {% block page-id %}news{% endblock %}
-{% block title %}Últimas Notícias - {% endblock %}
 {% block page-theme %}c{% endblock %}
+{% block title %}Últimas Notícias - {% endblock %}
 {% block header %}
 	<div data-role="header" data-theme="b" data-position="inline">
 		<a href="/" data-icon="arrow-l" data-rel="back" data-direction="reverse">Voltar</a>
@@ -14,12 +14,11 @@
 		<ul data-role="listview" data-theme="c" data-dividertheme="d">
 			<li data-role="list-divider">{{ entries|length }} notícia{{ entries|length|pluralize }}</li>
 		{% for entry in entries %}
-			<li><a href="/noticia/">{{ entry.title }}</a>
+			<li><a href="/noticia/?id={{ forloop.counter }}">{{ entry.title }}</a>
 		{% endfor %}
 			<li>&nbsp;</li>
-			<li data-theme="c"><a href="http://www.twitter.com/ufesonline" target="_blank">Veja mais notícias no Twitter</a></li>
+			<li data-theme="c"><a href="http://www.twitter.com/ufesonline/" target="_blank">Veja mais notícias no Twitter</a></li>
 		</ul>
-		
+	
 	</div>
 {% endblock %}
-{% block footer %}{% endblock %}
