--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <div data-role="page" data-theme="{% block page-theme %}u{% endblock %}" id="{% block page-id %}{% endblock %}">
         {% block header %}{% endblock %}
         {% block content %}{% endblock %}
+		{% block footer %}{% endblock %}
     </div>
 </body>
 </html>
