--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
 		</div>
 		
 		<ul data-role="listview" data-inset="true" data-theme="c">
-			<li><a href="/changelog/"><h3>Ufes Mobile</h3><p>{{ version }}</p></a></li>
+			<li><a href="/changelog/"><h3>Portal Ufes Mobile</h3><p>{{ version }}</p></a></li>
 			<li><a href="http://www.twitter.com/blude/" target="_blank"><h3>Criado por</h3><p>Saulo Pratti (twitter.com/blude)</p></a></li>
 			<li>❤ Vitória, 2011</li>
 		</ul>
