--- a/templates/base.html
+++ b/templates/base.html
@@ -2,18 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %}Mobile Ufes</title>
+    <title>{% block title %}{% endblock %}Portal Ufes Mobile</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" type="text/css">
     <link rel="stylesheet" href="/media/css/master.css" type="text/css">
     <link rel="alternate" href="http://portal.ufes.br/rss.xml" type="application/rss+xml" title="RSS">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
-    <script type="text/javascript">
-
-        $(document).bind('mobileinit', function() {
-            $.mobile.loadingMessage = false; 
-        });
-        
-    </script>
+	<script type="text/javascript" src="/media/js/ufesmobile.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
 </head>
 <body>
