--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -1,8 +1,8 @@
 ﻿{% extends 'base.html' %}
 {% block title %}Changelog - {% endblock %}
-{% block page-theme %}b{% endblock %}
+{% block page-theme %}c{% endblock %}
 {% block header %}
-	<div data-role="header" data-position="inline">
+	<div data-role="header" data-position="inline" data-theme="b">
 		<a href="/about/" data-icon="arrow-l" data-rel="back" data-direction="reverse">Voltar</a>
 		<h2>Changelog</h2>
 	</div>
@@ -13,13 +13,17 @@
 		<div id="changes">
 			<h4>2.1</h4>
 			<ul>
-				<li>corrigido listas com tema "d"</li>
+				<li>geral: correção de bugs introduzidos com a nova versão</li>
+				<li>novo: data e autor na notícia</li>
+				<li>corrigido: link para enviar por email mais completo</li>
+				<li>melhorado: messagem de carregamento em português</li>
+				<li>corrigido: menus com tema "d" substituidos pelo tema "c"</li>
 			</ul>
 			<h4>2.0</h4>
 			<ul>
-				<li>nova interface com jQuery Mobile</li>
-				<li>reformulação do código em Python</li>
-				<li>hospedado no Google App Engine</li>
+				<li>novo: interface com jQuery Mobile</li>
+				<li>melhorado: reformulação do código em Python</li>
+				<li>melhorado: hospedagem no Google App Engine</li>
 			</ul>
 			<h4>1.0</h4>
 			<ul>
