loading text translated to portuguese; bg color fix.

--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -28,7 +28,7 @@
 			<h4>1.0</h4>
 			<ul>
 				<li>CSS baseado no tema do jQTouch</li>
-				<li>desenvolvido em PHP</li>
+				<li>desenvolvido em PHP (<a href="http://www.youtube.com/watch?v=WWaLxFIVX1s">noooooo!</a>)</li>
 			</ul>
 		</div>
 		
