--- a/media/css/master.css
+++ b/media/css/master.css
@@ -8,11 +8,11 @@
 	font-weight: bold;
 	text-shadow: 0 -1px 1px #000000;
 	background-image: -moz-linear-gradient(top, 
-							#3c3c3c, 
-							#111111);
-	background-image: -webkit-gradient(linear,left top,left bottom,
-		color-stop(0, 	#3c3c3c),
-		color-stop(1, 		#111111));
+							#006666, 
+							#004449);
+	background-image: -webkit-gradient(linear, left top, left bottom,
+		color-stop(0, 		#006666),
+		color-stop(1, 		#004449));
   	-msfilter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#3c3c3c', EndColorStr='#111111')";
 }
 .ui-bar-u, 
@@ -31,12 +31,16 @@
 }
 .ui-body-u {
 	border: 1px solid 		#2A2A2A;
-	background: 			#222222;
+	background: 			#004449;
 	color: 					#fff;
 	text-shadow: 0 1px 0 	#000;
 	font-weight: normal;
-	background-image: -moz-linear-gradient(top, #004449, #066);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#004449), to(#006666));
+	background-image: -moz-linear-gradient(top,
+							#004449,
+							#006666);
+	background-image: -webkit-gradient(linear, left top, left bottom,
+		color-stop(0,		#004449),
+		color-stop(1,		#006666));
   	-msfilter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#004449', EndColorStr='#006666')";
 }
 .ui-body-u,
@@ -120,9 +124,6 @@
 
 /* extra */
 
-.ui-mobile #home {
-	background: #066;
-}
 .ui-mobile #homeheader {
 	padding: 55px 25px 0;
 	text-align: center
