--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
 </head>
 <body>
-    <div data-role="page" data-theme="{% block page-theme %}u{% endblock %}" id="{% block page-id %}{% endblock %}">
+    <div data-role="page" data-theme="{% block page-theme %}{% endblock %}" id="{% block page-id %}{% endblock %}">
         {% block header %}{% endblock %}
         {% block content %}{% endblock %}
 		{% block footer %}{% endblock %}
