share on facebook and twitter buttons. new MIT license.

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,12 +15,38 @@
 		</div>
 		
 		<ul data-role="listview" data-inset="true" data-theme="c">
-			<li><a href="/changelog/"><h3>Portal Ufes Mobile</h3><p>{{ version }}</p></a></li>
-			<li><a href="http://www.twitter.com/blude/" target="_blank"><h3>Criado por</h3><p>Saulo Pratti (twitter.com/blude)</p></a></li>
-			<li>❤ Vitória, 2011</li>
+			<li><a href="/changelog/"><h3>Portal Ufes Mobile</h3></a><p>versão {{ version }}</p></li>
+			<li><a href="http://www.twitter.com/blude/" target="_blank"><h3>Criado por</h3><p>Saulo Pratti (@blude)</p></a></li>
+			<li><span>❤ Vitória 2011</span></li>
 		</ul>
-		<p><a href="http://creativecommons.org/licenses/by/3.0/" data-role="button" data-theme="c" data-icon="info" target="_blank">Creative Commons</a></p>
-		<p><a href="mailto:sppratti@gmail.com?subject=Mobile Ufes" data-role="button" data-theme="c">Enviar feedback</a></p>
+		
+		<div>
+			<p>Este é um projeto pessoal, independente e que não possui nenhum vínculo com a <strong>Universidade Federal do Espírito Santo</strong>.<p>
+			<p>Se você deseja saber como este site foi feito e/ou quer contribuir você pode <a href="https://github.com/blude/Portal-Ufes-Mobile" target="_blank">encontrá-lo no GitHub</a>.
+		</div>
+		<div data-role="collapsible" data-collapsed="true" data-theme="a">
+		<h4>Licença</h4>
+			<p>The MIT License</p>
+			<p>Copyright (c) 2011 Saulo Pratti</p>
+			<p>Permission is hereby granted, free of charge, to any person obtaining a copy
+			of this software and associated documentation files (the "Software"), to deal
+			in the Software without restriction, including without limitation the rights
+			to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+			copies of the Software, and to permit persons to whom the Software is
+			furnished to do so, subject to the following conditions:</p>
+
+			<p>The above copyright notice and this permission notice shall be included in
+			all copies or substantial portions of the Software.</p>
+
+			<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+			IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+			FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+			AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+			LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+			OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
+			</div>
+		</div>
+		<p><a href="mailto:sppratti@gmail.com?subject=Feedback: Portal Ufes Mobile" data-role="button" data-theme="b">Enviar feedback</a></p>
 		
 	</div>
 {% endblock %}
