--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -11,7 +11,14 @@
 	<div data-role="content">
 	
 		<div id="changes">
-			<h4>2.1</h4>
+		
+			<h3>2.1.1</h3>
+			<ul>
+				<li>novo: compartilhar via Facebook e Twitter</li>
+				<li>novo: licença MIT, código fonte disponível no GitHub</li>
+				<li>melhorado: textos e links</li>
+			</ul>
+			<h3>2.1</h3>
 			<ul>
 				<li>geral: correção de bugs introduzidos com a nova versão</li>
 				<li>novo: data e autor na notícia</li>
@@ -19,13 +26,13 @@
 				<li>melhorado: messagem de carregamento em português</li>
 				<li>corrigido: menus com tema "d" substituidos pelo tema "c"</li>
 			</ul>
-			<h4>2.0</h4>
+			<h3>2.0</h3>
 			<ul>
 				<li>novo: interface com jQuery Mobile</li>
 				<li>melhorado: reformulação do código em Python</li>
 				<li>melhorado: hospedagem no Google App Engine</li>
 			</ul>
-			<h4>1.0</h4>
+			<h3>1.0</h3>
 			<ul>
 				<li>CSS baseado no tema do jQTouch</li>
 				<li>desenvolvido em PHP (<a href="http://www.youtube.com/watch?v=WWaLxFIVX1s">noooooo!</a>)</li>
