--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 					<span class="fn org">Universidade Federal do Espírito Santo</span><br>
 					<span class="adr">
 						<span class="street-adress">Av. Fernando Ferrari, 514</span> &ndash; Goiabeiras<br>
-						<span class="postal-code">29075-910</span> <span class="locality">Vitória</span>, <span class="region">ES</span>
+						<span class="locality">Vitória</span>, <span class="region">ES</span> &ndash; <span class="postal-code">29075-910</span>
 					</span>
 				</a>
 			</div>
