--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -2,21 +2,22 @@
 {% block title %}Changelog - {% endblock %}
 {% block page-theme %}c{% endblock %}
 {% block header %}
-	<div data-role="header" data-position="inline" data-theme="b">
+	<header data-role="header" data-position="inline" data-theme="b">
 		<a href="/about/" data-icon="arrow-l" data-rel="back" data-direction="reverse">Voltar</a>
 		<h2>Changelog</h2>
-	</div>
+	</header>
 {% endblock %}
 {% block content %}
-	<div data-role="content">
+	<section data-role="content">
 	
 		<div id="changes">
 		
 			<h3>2.1.1</h3>
 			<ul>
+				<li>correção: HTML mal-formatado</li>
 				<li>novo: compartilhar via Facebook e Twitter</li>
-				<li>novo: licença MIT, código fonte disponível no GitHub</li>
-				<li>melhorado: textos e links</li>
+				<li>novo: licença MIT, código fonte disponível via GitHub</li>
+				<li>melhorado: textos e links diversos</li>
 			</ul>
 			<h3>2.1</h3>
 			<ul>
@@ -39,5 +40,5 @@
 			</ul>
 		</div>
 		
-	</div>
+	</section>
 {% endblock %}
