--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Portal Ufes Mobile</title>
+	<link rel="alternate" href="http://portal.ufes.br/rss.xml" type="application/rss+xml" title="RSS">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" type="text/css">
 	<link rel="stylesheet" href="/media/css/master.css" type="text/css">
-	<link rel="alternate" href="http://portal.ufes.br/rss.xml" type="application/rss+xml" title="RSS">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
 	<script type="text/javascript" src="/media/js/ufesmobile.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
@@ -13,16 +13,18 @@
 <body>
 	<div data-role="page" data-theme="u" id="home">
 	
-		<div id="homeheader">
+		<header id="homeheader">
 			<h1 id="logo"><img src="/media/img/ufes-logo.png" width="212" height="54" alt="Universidade Federal do Espírito Santo"></h1>
-		</div>
+		</header>
 		
-		<div data-role="content">	
+		<section data-role="content">	
 		
-			<ul data-role="listview" data-inset="true" data-theme="c" data-dividertheme="c">
-				<li><a href="/noticias/">Últimas notícias</a></li>
-				<li><a href="/sobre/" data-transition="slideup">Sobre</a></li>
-			</ul>
+			<nav>
+				<ul data-role="listview" data-inset="true" data-theme="c">
+					<li><a href="/noticias/">Últimas notícias</a></li>
+					<li><a href="/sobre/" data-transition="slideup">Sobre</a></li>
+				</ul>
+			</nav>
 			
 			<div id="addressinfo">
 				<a rel="external" href="http://www.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Ufes&sll=-20.263996,-40.266466&sspn=0.010125,0.021136&ie=UTF8&hq=Ufes&hnear=&ll=-20.278522,-40.30122&spn=0.010124,0.021136&z=16">
@@ -35,10 +37,10 @@
 			</div>
 			
 			<ul data-role="listview" data-inset="true" data-theme="c">
-				<li><a href="http://portal.ufes.br/">Versão normal</a></ul>
+				<li><a href="http://portal.ufes.br/">Versão normal</a></li>
 			</ul>
 			
-		</div>
+		</section>
 
 	</div>
 </body>
