--- a/templates/news.html
+++ b/templates/news.html
@@ -3,24 +3,26 @@
 {% block page-theme %}c{% endblock %}
 {% block title %}Últimas Notícias - {% endblock %}
 {% block header %}
-	<div data-role="header" data-theme="b" data-position="inline">
+	<header data-role="header" data-theme="b" data-position="inline">
 		<a href="/" data-icon="arrow-l" data-rel="back" data-direction="reverse">Voltar</a>
 		<h1>Últimas notícias</h1>
-	</div>
+	</header>
 {% endblock %}
 {% block content %}
-	<div data-role="content">
+	<section data-role="content">
 	
-		<ul data-role="listview" data-theme="c" data-dividertheme="d">
-			<li data-role="list-divider">{{ entries|length }} notícia{{ entries|length|pluralize }}</li>
-		{% for entry in entries %}
-			<li><a href="/noticia/?id={{ forloop.counter }}">{{ entry.title }}</a></li>
-		{% endfor %}
-		</ul>
+		<div>
+			<ul data-role="listview" data-theme="c" data-dividertheme="d">
+				<li data-role="list-divider">{{ entries|length }} notícia{{ entries|length|pluralize }}</li>
+			{% for entry in entries %}
+				<li><a href="/noticia/?id={{ forloop.counter }}">{{ entry.title }}</a></li>
+			{% endfor %}
+			</ul>
+		</div>
 	
 		<hr>
 	
-		<p><a href="http://www.twitter.com/ufesonline/" data-role="button" data-theme="c" target="_blank">Veja mais notícias no Twitter</a></p>
+		<p><a href="http://twitter.com/ufesonline/" data-role="button" data-theme="c" target="_blank">Veja mais notícias no Twitter</a></p>
 	
-	</div>
+	</section>
 {% endblock %}
