--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -12,6 +12,11 @@
 	
 		<div id="changes">
 		
+			<h3>2.2</h3>
+			<ul>
+				<li>novo: cardápio do RU (finalmente! =D)</li>
+			</ul>
+		
 			<h3>2.1.1</h3>
 			<ul>
 				<li>correção: HTML mal-formatado</li>
