--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
 			<nav>
 				<ul data-role="listview" data-inset="true" data-theme="c">
 					<li><a href="/noticias/">Últimas notícias</a></li>
+					<li><a href="/cardapio/">Cárdapio do RU</a></li>
 					<li><a href="/sobre/" data-transition="slideup">Sobre</a></li>
 				</ul>
 			</nav>
