--- a/templates/index.html
+++ b/templates/index.html
@@ -21,14 +21,14 @@
 		
 			<nav>
 				<ul data-role="listview" data-inset="true" data-theme="c">
-					<li><a href="/noticias/">Últimas notícias</a></li>
-					<li><a href="/cardapio/">Cárdapio do RU</a></li>
-					<li><a href="/sobre/" data-transition="slideup">Sobre</a></li>
+					<li><a href="/noticias/" rel="external">Últimas notícias</a></li>
+					<li><a href="/cardapio/" rel="external">Cárdapio do RU</a></li>
+					<li><a href="/sobre/" rel="external">Sobre</a></li>
 				</ul>
 			</nav>
 			
 			<div id="addressinfo">
-				<a rel="external" href="http://www.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Ufes&sll=-20.263996,-40.266466&sspn=0.010125,0.021136&ie=UTF8&hq=Ufes&hnear=&ll=-20.278522,-40.30122&spn=0.010124,0.021136&z=16">
+				<a href="http://www.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Ufes&sll=-20.263996,-40.266466&sspn=0.010125,0.021136&ie=UTF8&hq=Ufes&hnear=&ll=-20.278522,-40.30122&spn=0.010124,0.021136&z=16" rel="external">
 					<span class="fn org">Universidade Federal do Espírito Santo</span><br>
 					<span class="adr">
 						<span class="street-adress">Av. Fernando Ferrari, 514</span> &ndash; Goiabeiras<br>
@@ -38,7 +38,7 @@
 			</div>
 			
 			<ul data-role="listview" data-inset="true" data-theme="c">
-				<li><a href="http://portal.ufes.br/">Versão normal</a></li>
+				<li><a href="http://portal.ufes.br/" rel="external">Versão normal</a></li>
 			</ul>
 			
 		</section>
