--- a/templates/cardapio.html
+++ b/templates/cardapio.html
@@ -4,7 +4,7 @@
 {% block page-theme %}d{% endblock %}
 {% block header %}
 	<header data-role="header" data-theme="b">
-		<a href="/" data-icon="arrow-l" data-rel="back">Voltar</a>
+		<a href="../" data-icon="arrow-l" data-rel="back" rel="external">Voltar</a>
 		<h1>Cardapio do RU</h1>
 	</header>
 {% endblock %}
@@ -12,22 +12,72 @@
 	<section data-role="content">
 	
 		<div id="cardapio">
+			
+			<h2 class="dia"></h2>
+
+			<p><strong>Prato principal</strong><br>
+				<span class="principal"></span><br>
+				<small>(ou <span class="opcao"></span>)</small></p>
+			<p><strong>Guarnição</strong><br>
+				<span class="guarnicao"></span></p>
+			<p><strong>Acompanhamento</strong><br>
+				<span class="acompanha"></span></p>
+			<p><strong>Salada</strong><br>
+				<span class="salada"></span></p>
+			<p><strong>Suco</strong><br>
+				<span class="suco"></span></p>
+			<p><strong>Sobremesa</strong><br>
+				<span class="sobremesa"></span></p>
+			
 		</div>
 		
 		<script type="text/javascript">
 		$(function() {
 		
-			// O JSON gerado pelo Yahoo! Pipes ainda pode melhorar,
-			// contribua: http://pipes.yahoo.com/blude/rudaufes
-			
-			var url = "http://pipes.yahoo.com/pipes/pipe.run?_id=ee419f78057959f0ff9adb6c4f8bad6a&_render=json";
-			
+			// noooooooooovo JSON totalmente mega-boga e limpo
+			// graças às maravilhas do RegExp :D
+			// http://pipes.yahoo.com/blude/cardapioruplus
+
+			var url = "http://pipes.yahoo.com/pipes/pipe.run?_id=3216a636bfd2616944764c6b30d94015&_render=json";
+
 			$.getJSON(url, function(data) {
-				$('#cardapio').html(data.value.items[0].content);
+
+				function cardapio() {
+					this.dia = data.value.items[0].content;
+					this.salada = data.value.items[1].content;
+					this.principal = data.value.items[2].content;
+					this.opcao = data.value.items[3].content;
+					this.guarnicao = data.value.items[4].content;
+					this.acompanha = data.value.items[5].content;
+					this.sobremesa = data.value.items[6].content;
+					this.suco = data.value.items[7].content;
+				}
+				
+				var ru = new cardapio();
+				
+				$('.dia').html(ru.dia);
+				$('.salada').html(ru.salada);
+				$('.principal').html(ru.principal);
+				$('.opcao').html(ru.opcao);
+				$('.guarnicao').html(ru.guarnicao);
+				$('.acompanha').html(ru.acompanha);
+				$('.sobremesa').html(ru.sobremesa);
+				$('.suco').html(ru.suco);
+				
+			/*
+				for (var i = 0; i < data.value.items.length; i++) {
+				
+					$('#cardapio').append(data.value.items[i].content);
+
+				}
+			*/
+				
 			});
-			
+		
 		});
 		</script>
+		
+		<p class="ps"><strong>PS:</strong> Informações obtidas diretamente da <a href="http://portal.ufes.br/cardapio" target="_blank">página no Portal da Ufes</a>.</p>
 		
 		<p><a href="http://twitter.com/crudaufes" data-role="button" data-theme="b" target="_blank">Veja o cardápio no Twitter</a></p>
 
